Games are choppy on XWayland
Affected version
- OS: ArchLinux (latest as of 2020.10.07)
- Mutter: 3.38.1
- Session: Wayland
- GPU / driver: AMD + mesa
Bug summary
Most native and wine games running through XWayland are choppy on a 144hz display, it feels like they are running at a lower frame rate. It is especially visible with Xonotic, but much less so with SuperTuxKart.
glxgears reports 144hz.
When launched with the SDL_VIDEODRIVER=wayland
parameter, Xonotic is smooth.
Steps to reproduce
- Start Xonotic or a Wine game (tested with Trackmania 2 Stadium on Steam and Trackmania 2020 on Lutris) in fullscreen mode.
- Play the game, it feels choppy especially when moving fast.
- Play the same games on a X11 session, they feel a lot smoother.
What happened
The games feel choppy.
The Xonotic in-game FPS counter reports 144fps when vsync is enabled in the game preferences, so the screen refresh rate is properly detected. But it feels like the game itself runs at a lower frame rate.
What did you expect to happen
The games should be as smooth as they are on a X11 session.
Additional information
It also used to happen with Mutter 3.36.6. I also tested Xonotic with a Fedora 33 beta LiveUSB, with the same results.
Edited by Yannick Le Guen